--- a/style.css
+++ b/style.css
@@ -15,3 +15,18 @@ h1 {
 canvas {
     background-color: #2a5;
 }
+
+button {
+    background: #f8f7f6;
+    color: #fff;
+    font-size: 24px;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: backround 0.5s ease;
+    border: none;
+}
+
+button:hover {
+    background: #f8f7f6b8;
+}
