--- a/world/style.css
+++ b/world/style.css
@@ -37,3 +37,12 @@ button:hover {
     background: #f8f7f6b8;
     cursor: pointer;
 }
+
+#osmPanel {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 50vh;
+}
