--- a/style.css
+++ b/style.css
@@ -13,11 +13,17 @@ body{
 }
 
 button{
-    border: none;
+    display: inline-block;
+    background: #f8f7f6;
+    color: #fff;
+    font-size: 24px;
+    padding: 10px;
+    text-decoration: none;
     border-radius: 5px;
-    padding: 5px 5px 7px 5px;
-    margin: 2px;
-    cursor:pointer;
+    transition: backround 0.5s ease;
+    border: none;
+    text-shadow: 1px 1px black;
+    margin: 5px;
 }
 button:hover{
     background:blue;
@@ -32,4 +38,11 @@ button:hover{
 }
 #carCanvas{
     background:#2a5;
+}
+
+.miniMap{
+    position: absolute;
+    right: 20px;
+    bottom: 20px; 
+    opacity: 70%;
 }
